--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
 	<link rel="stylesheet" type="text/css" href="index11.css">
 </head>
 <body>
+	<div class="top">
+		<img src="images/a15.png">
+		<div >
+			<p id="top1">[温馨提示]最近有不少不法分子在网上骗人，请大家注意！！！</p>
+		</div>
+	</div>
 	<div class="box" id="box">
 		<div class="slider" id="slider">
 			<div class="slide"><img src="images/b5.png" alt=""></div>
@@ -18,11 +24,11 @@
 		<span id="left" style="opacity:0.5;"><</span>
 		<span id="right" style="opacity:0.5;">></span>
 		<ul class="nav" id="nav">
-			<li class="active"></li>
-			<li></li>
-			<li></li>
-			<li></li>
-			<li></li>
+			<li class="active">1</li>
+			<li>2</li>
+			<li>3</li>
+			<li>4</li>
+			<li>5</li>
 			
 		</ul>
 	</div>
